add about header

--- a/index.html
+++ b/index.html
@@ -450,7 +450,17 @@
         </div>
         <!-- page3 -->
         <div id="about">
-            
+            <div id="about-header-container">
+                <div id="about-header-left">
+                    <p>Who I am</p>
+                </div>
+                <div id="about-header-right">
+                    <a href="#">
+                        <p>What I offer</p>
+                        <i class="ph-light ph-arrow-up-right"></i>
+                    </a>
+                </div>
+            </div>
         </div>
 
     </main>
