change hero upper subtext

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div id="hero-content-upper">
                     <div id="subtext-upper-image">
                         <div id="subtext-image"></div>
-                        <p>Learning Framer (No code Frontend)</p>
+                        <p>Learning React ( JavaScript Library )</p>
                     </div>
                     <div id="hero-main-text">
                         <h5>I'm Pranav, crafting web technology wonders amidst the beat of city creativity.</h5>
