about text section added

--- a/index.html
+++ b/index.html
@@ -461,6 +461,12 @@
                     </a>
                 </div>
             </div>
+            <div id="about-upper-text">
+                <p class="about-text">Hey, I’m Pranav, a product and graphic designer with a knack for creating meaningful, user-friendly designs. Actively <a href="">Seeking Opportunities</a>, where we will work together redefining digital interactions.</p>
+                <p class="about-text">Currently pursuing Bachelor's of technology in <a href="">Computer Science Engineering</a> from Babu Banarasi Das University, Lucknow.</p>
+                <p class="about-text"></p>
+            </div>
+            <div id="about-lower-experience"></div>
         </div>
 
     </main>
