Particle.png name edit

--- a/index.html
+++ b/index.html
@@ -462,10 +462,19 @@
                 </div>
             </div>
             <div id="about-upper-text">
-                <p class="about-text">Hey, I’m Pranav, a product and graphic designer with a knack for creating meaningful, user-friendly designs. Actively <a href="">Seeking Opportunities</a>, where we will work together redefining digital interactions.</p>
-                <p class="about-text">Currently pursuing Bachelor's of technology in <a href="">Computer Science Engineering</a> from Babu Banarasi Das University, Lucknow.</p>
+                <p class="about-text">Hey, I’m <a href="">Pranav</a>, a product and graphic designer with a knack for creating meaningful, user-friendly designs. I’m passionate about UI/UX, problem-solving, and enhancing digital experiences.</p>
+                <p class="about-text">Currently pursuing a Bachelor of Technology in <a href="">Computer Science Engineering</a> at Babu Banarasi Das University, Lucknow.</p>
+                <p class="about-text">I’m <a href="">actively seeking internships</a> in UI/UX design, product design, or front-end development where I can apply my skills and grow as a designer. I thrive in collaborative environments and love tackling challenges that enhance user experiences.</p>
+                <p class="about-text">
+                    Skills & Tools : <br>
+                    * UI/UX Design (Wireframing, Prototyping, Responsive Design) <br>
+                    * Graphic Design & Branding <br>
+                    * Front-end Development (HTML, CSS, JavaScript, Tailwind CSS) <br>
+                    * Tools: Figma, Adobe XD, Photoshop, Illustrator
+                </p>
                 <p class="about-text"></p>
-            </div>
+                <p class="about-text"></p>
+                </div>
             <div id="about-lower-experience"></div>
         </div>
 
