about page update

--- a/index.html
+++ b/index.html
@@ -462,20 +462,19 @@
                 </div>
             </div>
             <div id="about-upper-text">
-                <p class="about-text">Hey, I’m <a href="">Pranav</a>, a product and graphic designer with a knack for creating meaningful, user-friendly designs. I’m passionate about UI/UX, problem-solving, and enhancing digital experiences.</p>
-                <p class="about-text">Currently pursuing a Bachelor of Technology in <a href="">Computer Science Engineering</a> at Babu Banarasi Das University, Lucknow.</p>
-                <p class="about-text">I’m <a href="">actively seeking internships</a> in UI/UX design, product design, or front-end development where I can apply my skills and grow as a designer. I thrive in collaborative environments and love tackling challenges that enhance user experiences.</p>
+                <p class="about-text">Hey, I’m <span>Pranav</span>, a product and graphic designer with a knack for creating meaningful, user-friendly designs. I’m passionate about UI/UX, problem-solving, and enhancing digital experiences.</p>
+                <p class="about-text">Currently pursuing a Bachelor of Technology in <span>Computer Science Engineering</span> at Babu Banarasi Das University, Lucknow.</p>
+                <p class="about-text">I’m <span>actively seeking internships</span> in front-end development, UI/UX design, or product design where I can apply my skills and grow as a designer. I thrive in collaborative environments and love tackling challenges that enhance user experiences.</p>
                 <p class="about-text">
                     Skills & Tools : <br>
-                    * UI/UX Design (Wireframing, Prototyping, Responsive Design) <br>
-                    * Graphic Design & Branding <br>
-                    * Front-end Development (HTML, CSS, JavaScript, Tailwind CSS) <br>
-                    * Tools: Figma, Adobe XD, Photoshop, Illustrator
+                    - <span>Front-end Development</span> (HTML, CSS, JS) <br>
+                    - UI/UX Design (Wireframing, Prototyping) <br>
+                    - Graphic Design & Branding <br>
+                    - Tools: Git, Figma, Adobe XD, Photoshop, Illustrator
                 </p>
-                <p class="about-text"></p>
-                <p class="about-text"></p>
-                </div>
-            <div id="about-lower-experience"></div>
+                <p class="about-text">If you're looking for a passionate developer to join your team, let's <span>connect!</span> 🚀</p>
+            </div>
+            <!-- <div id="about-lower-experience"></div> -->
         </div>
 
     </main>
