added projects page html,css,js file

--- a/index.html
+++ b/index.html
@@ -44,25 +44,25 @@
                             <div id="Home">
                                 <div class="menu-item-cont">
                                     <i class="ph-duotone ph-house-simple"></i>
-                                    <a href="#hero">Home</a>
+                                    <a href="index.html">Home</a>
                                 </div>
                             </div>
                             <div class="menu-item">
                                 <div class="menu-item-cont">
                                     <i class="ph-duotone ph-folders"></i>
-                                    <a href="#work">Projects</a>
+                                    <a href="pages/projects.html">Projects</a>
                                 </div>
                             </div>
                             <div class="menu-item">
                                 <div class="menu-item-cont">
                                     <i class="ph-duotone ph-trophy"></i>
-                                    <a href="#Honors">Honors</a>
+                                    <a href="pages/honors.html">Honors</a>
                                 </div>
                             </div>
                             <div class="menu-item">
                                 <div class="menu-item-cont">
                                     <i class="ph-duotone ph-envelope-simple-open"></i>
-                                    <a href="#Contact">Contact</a>
+                                    <a href="pages/contact.html">Contact</a>
                                 </div>
                             </div>
                         </div>
@@ -71,13 +71,13 @@
                             <div class="menu-item">
                                 <div class="menu-item-cont">
                                     <i class="ph-duotone ph-bookmarks-simple"></i>
-                                    <a href="#Projects">Bookmarks</a>
+                                    <a href="pages/projects.html">Bookmarks</a>
                                 </div>
                             </div>
                             <div class="menu-item">
                                 <div class="menu-item-cont">
                                     <i class="ph-duotone ph-figma-logo"></i>
-                                    <a href="#Stack">Stack</a>
+                                    <a href="pages/stack.html">Stack</a>
                                 </div>
                             </div>
                             <div class="menu-item hover-arrow">
