--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <div class="menu-item hover-arrow">
                                 <div class="menu-item-cont">
                                     <i class="ph ph-linkedin-logo"></i>
-                                    <a href="www.LinkedIn.com">LinkedIn</a>
+                                    <a href="www.linkedin.com/in/pranav-kumar-singh-1030b929a">LinkedIn</a>
                                     <i id="arrow" class="ph ph-arrow-up-right"></i>
                                 </div>
                             </div>
