--- a/pages/projects.html
+++ b/pages/projects.html
@@ -50,7 +50,7 @@
                             <div id="Projects">
                                 <div class="menu-item-cont">
                                     <i class="ph-duotone ph-folders"></i>
-                                    <a href="pages/projects.html">Projects</a>
+                                    <a href="https://pranavmarch20.github.io/Portfolio/pages/projects.html">Projects</a>
                                 </div>
                             </div>
                             <div class="menu-item">
@@ -71,7 +71,7 @@
                             <div class="menu-item">
                                 <div class="menu-item-cont">
                                     <i class="ph-duotone ph-bookmarks-simple"></i>
-                                    <a href="pages/projects.html">Bookmarks</a>
+                                    <a href="https://pranavmarch20.github.io/Portfolio/pages/projects.html">Bookmarks</a>
                                 </div>
                             </div>
                             <div class="menu-item">
