--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <div id="Home">
                                 <div class="menu-item-cont">
                                     <i class="ph-duotone ph-house-simple"></i>
-                                    <a href="index.html">Home</a>
+                                    <a href="https://pranavmarch20.github.io/Portfolio/">Home</a>
                                 </div>
                             </div>
                             <div class="menu-item">
