added path to projects

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                     <p>Featured work</p>
                 </div>
                 <div id="work-header-right">
-                    <a href="#projects">
+                    <a href="pages/projects.html">
                         <p>All projects</p>
                         <i class="ph-light ph-arrow-up-right"></i>
                     </a>
