sidebar menu change

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -61,8 +61,8 @@
                             </div>
                             <div class="menu-item">
                                 <div class="menu-item-cont">
-                                    <i class="ph-duotone ph-envelope-simple-open"></i>
-                                    <a href="pages/contact.html">Contact</a>
+                                    <i class="ph ph-folder-simple-user"></i>
+                                    <a href="pages/projects.html">About</a>
                                 </div>
                             </div>
                         </div>
@@ -70,13 +70,13 @@
                             <p>RESOURCES</p>
                             <div class="menu-item">
                                 <div class="menu-item-cont">
-                                    <i class="ph-duotone ph-bookmarks-simple"></i>
-                                    <a href="https://pranavmarch20.github.io/Portfolio/pages/projects.html">Bookmarks</a>
+                                    <i class="ph-duotone ph-envelope-simple-open"></i>
+                                    <a href="pages/contact.html">Contact</a>
                                 </div>
                             </div>
                             <div class="menu-item">
                                 <div class="menu-item-cont">
-                                    <i class="ph-duotone ph-figma-logo"></i>
+                                    <i class="ph ph-puzzle-piece"></i>
                                     <a href="pages/stack.html">Stack</a>
                                 </div>
                             </div>
