correction in sidebar navigation a tags added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,9 +3,166 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Pranav's Portfolio Website">
+    <meta name="keywords" content="Portfolio, Pranav Kumar Singh, Frontend Developer, Pranav">
+    <meta name="author" content="Pranav Kumar Singh">
+    <title>Pranav - Contact</title>
+    <link rel="stylesheet" href="contact.css">
+    <link rel="icon" href="../assets/favicon.png" type="image/png">
+     <!-- Phosphor Icons -->
+    <script src="https://unpkg.com/@phosphor-icons/web@2.1.1"></script>  
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    contact
+    <!-- Sidebar for screen >= 1000px -->
+    <header id="sidebar-container">
+        <div id="sidebar-bg-image1"></div>
+        <div id="sidebar-bg-image2"></div>
+        <nav id="sidebar-header-bottom-container">
+            <div id="sidebar-head-container">
+                <div id="sidebar-head-header">
+                    <div id="header-image"></div>
+                    <div id="header-name-status">
+                        <div id="header-name">
+                            <h1>Pranav Kumar Singh</h1>
+                        </div>
+                        <div id="header-status">
+                            <p>Frontend Developer</p>
+                        </div>
+                    </div>
+                </div>
+                <div id="sidebar-menu">
+                    <div id="menu">
+                        <div id="menu-top">
+                            <a href="../index.html">
+                                <div class="menu-item">
+                                    <div class="menu-item-cont">
+                                        <i class="ph-duotone ph-house-simple"></i>
+                                        <p>Home</p>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="../pages/projects.html">
+                                <div class="menu-item">
+                                    <div class="menu-item-cont">
+                                        <i class="ph-duotone ph-folders"></i>
+                                        <p>Projects</p>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="../pages/honors.html">
+                                <div class="menu-item">
+                                    <div class="menu-item-cont">
+                                        <i class="ph-duotone ph-trophy"></i>
+                                        <p>Honors</p>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="../index.html#about">
+                                <div class="menu-item">
+                                    <div class="menu-item-cont">
+                                        <i class="ph ph-folder-simple-user"></i>
+                                        <p>About</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div id="menu-bottom">
+                            <p>RESOURCES</p>
+                            <a href="#">
+                                <div id="Contacts">
+                                    <div class="menu-item-cont">
+                                        <i class="ph-duotone ph-envelope-simple-open"></i>
+                                        <p>Contact</p>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="../pages/stack.html">
+                                <div class="menu-item">
+                                    <div class="menu-item-cont">
+                                        <i class="ph ph-puzzle-piece"></i>
+                                        <p>Stack</p>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="www.linkedin.com/in/pranav-kumar-singh-1030b929a">
+                                <div class="menu-item hover-arrow">
+                                    <div class="menu-item-cont">
+                                        <i class="ph ph-linkedin-logo"></i>
+                                        <p>LinkedIn</p>
+                                        <i id="arrow" class="ph ph-arrow-up-right"></i>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="sidebar-empty-162"></div>
+            <div id="sidebar-bottom-container">
+                <div id="sidebar-bottom-date-time-location">
+                    <div id="date-time-cont">
+                        <div id="date-time">
+                            <p id="sidebar-date">Jan 27, 2025</p>
+                        </div>
+                        <div id="location">
+                            <p>Lucknow, Uttar Pradesh</p>
+                        </div>
+                    </div>
+                </div>
+                <div id="sidebar-bottom-button">
+                    <div id="bottom-button">
+                        <span><i class="ph-light ph-download-simple"></i></span>
+                        <p>Download CV</p>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main id="main-container">
+        <!-- blur gradient -->
+        <div id="blur-gradient">
+            <div class="blur-gradient-1"></div>
+            <div class="blur-gradient-2"></div>
+            <div class="blur-gradient-3"></div>
+            <div class="blur-gradient-4"></div>
+            <div class="blur-gradient-5"></div>
+            <div class="blur-gradient-6"></div>
+            <div class="blur-gradient-7"></div>
+            <div class="blur-gradient-8"></div>
+        </div>
+        <!-- navbar for screen < 1000px -->
+        <header id="navbar-container">
+            <div id="header-toggle-menu-cont">
+                <div id="header-image-name">
+                    <div id="header-image"></div>
+                    <div id="header-name-status">
+                        <div id="header-name-nav">
+                            <h1>Pranav Kumar Singh</h1>
+                        </div>
+                        <div id="header-status-nav">
+                            <p>Frontend Developer</p>
+                        </div>
+                    </div>
+                </div>
+                <i class="ph-thin ph-list"></i>
+            </div>
+        </header>
+        
+        
+    </main>
+    <footer>
+        <!-- Footer content -->
+    </footer>
+    <script src="projects.js"></script>
+    <!-- Add any other scripts here -->
 </body>
 </html>
