--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Pranav's Portfolio Website">
-    <meta name="keywords" content="Portfolio, Pranav Kumar Singh, Frontend Developer">
+    <meta name="keywords" content="Portfolio, Pranav Kumar Singh, Frontend Developer, Pranav">
     <meta name="author" content="Pranav Kumar Singh">
-    <title>Pranav Kumar Singh</title>
+    <title>Pranav - Projects</title>
     <link rel="stylesheet" href="projects.css">
-    <link rel="icon" href="assets/favicon.png" type="image/png">
+    <link rel="icon" href="../assets/favicon.png" type="image/png">
      <!-- Phosphor Icons -->
     <script src="https://unpkg.com/@phosphor-icons/web@2.1.1"></script>  
     <!-- Google Fonts -->
@@ -41,52 +41,66 @@
                 <div id="sidebar-menu">
                     <div id="menu">
                         <div id="menu-top">
-                            <div class="menu-item">
-                                <div class="menu-item-cont">
-                                    <i class="ph-duotone ph-house-simple"></i>
-                                    <a href="../index.html">Home</a>
+                            <a href="../index.html">
+                                <div class="menu-item">
+                                    <div class="menu-item-cont">
+                                        <i class="ph-duotone ph-house-simple"></i>
+                                        <p>Home</p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div id="Projects">
-                                <div class="menu-item-cont">
-                                    <i class="ph-duotone ph-folders"></i>
-                                    <a href="https://pranavmarch20.github.io/Portfolio/pages/projects.html">Projects</a>
+                            </a>
+                            <a href="#">
+                                <div id="Projects">
+                                    <div class="menu-item-cont">
+                                        <i class="ph-duotone ph-folders"></i>
+                                        <p>Projects</p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menu-item">
-                                <div class="menu-item-cont">
-                                    <i class="ph-duotone ph-trophy"></i>
-                                    <a href="pages/honors.html">Honors</a>
+                            </a>
+                            <a href="../pages/honors.html">
+                                <div class="menu-item">
+                                    <div class="menu-item-cont">
+                                        <i class="ph-duotone ph-trophy"></i>
+                                        <p>Honors</p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menu-item">
-                                <div class="menu-item-cont">
-                                    <i class="ph ph-folder-simple-user"></i>
-                                    <a href="pages/projects.html">About</a>
+                            </a>
+                            <a href="../index.html#about">
+                                <div class="menu-item">
+                                    <div class="menu-item-cont">
+                                        <i class="ph ph-folder-simple-user"></i>
+                                        <p>About</p>
+                                    </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div id="menu-bottom">
                             <p>RESOURCES</p>
-                            <div class="menu-item">
-                                <div class="menu-item-cont">
-                                    <i class="ph-duotone ph-envelope-simple-open"></i>
-                                    <a href="pages/contact.html">Contact</a>
+                            <a href="../pages/contact.html">
+                                <div class="menu-item">
+                                    <div class="menu-item-cont">
+                                        <i class="ph-duotone ph-envelope-simple-open"></i>
+                                        <p>Contact</p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menu-item">
-                                <div class="menu-item-cont">
-                                    <i class="ph ph-puzzle-piece"></i>
-                                    <a href="pages/stack.html">Stack</a>
+                            </a>
+                            <a href="../pages/stack.html">
+                                <div class="menu-item">
+                                    <div class="menu-item-cont">
+                                        <i class="ph ph-puzzle-piece"></i>
+                                        <p>Stack</p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menu-item hover-arrow">
-                                <div class="menu-item-cont">
-                                    <i class="ph ph-linkedin-logo"></i>
-                                    <a href="www.LinkedIn.com">LinkedIn</a>
-                                    <i id="arrow" class="ph ph-arrow-up-right"></i>
+                            </a>
+                            <a href="www.linkedin.com/in/pranav-kumar-singh-1030b929a">
+                                <div class="menu-item hover-arrow">
+                                    <div class="menu-item-cont">
+                                        <i class="ph ph-linkedin-logo"></i>
+                                        <p>LinkedIn</p>
+                                        <i id="arrow" class="ph ph-arrow-up-right"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </div>
