--- a/pages/projects.html
+++ b/pages/projects.html
@@ -92,7 +92,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="www.linkedin.com/in/pranav-kumar-singh-1030b929a">
+                            <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/pranav-kumar-singh-1030b929a/">
                                 <div class="menu-item hover-arrow">
                                     <div class="menu-item-cont">
                                         <i class="ph ph-linkedin-logo"></i>
