add contact link, border correction

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 </div>
                 <div id="hero-contact-button-time">
                     <!-- <div id="before"></div> -->
-                    <a href="#contact">
+                    <a href="pages/contact.html">
                         <div id="hero-contact-btn">
                             <div id="hero-btn">
                                 <i class="ph-thin ph-lightning"></i>
